yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-and-morty-app  # Name of the deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rick-and-morty-app  # Label selector for pods
  template:
    metadata:
      labels:
        app: rick-and-morty-app  # Labels to apply to the pods
    spec:
      containers:
      - name: rick-and-morty-app  # Name of the container
        image: david817/rick-and-morty:1.0  # Docker image to use
        ports:
        - containerPort: 5000  # Port on which the container listens
