yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-service  # Name of the service
spec:
  selector:
    app: rick-and-morty  # Label selector for pods to target
  ports:
    - protocol: TCP
      port: 80  # Port on which the service is exposed
      targetPort: 5000  # Port on which the container listens
  type: NodePort  # Type of service
